server/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diag-kiube
  namespace: check
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diag-kiube
  template:
    metadata:
      labels:
        app: diag-kiube
    spec:
      containers:
      - name: diag-kiube
        image: steemax/net-check-server:v1.0.1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 50Mi
          limits:
            cpu: 200m
            memory: 200Mi
