server/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: check-port
  namespace: check
spec:
  selector:
    app: check-port
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
