server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: port-check
  namespace: check
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: check-ports.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: check-port
            port:
              number: 8080
